[package]
name = "replacer"
version = "0.1.1"
authors = ["Oleg Khryptul <okreptul@yahoo.com>"]
edition = "2018"

[dependencies]
regex = "1"
structopt = { version = "0.2", default-features = false }
walkdir = "2"
failure = "0.1"
failure_derive = "0.1"
diff = "0.1"
colored = "1.6"
rayon-cond = { git = "https://github.com/cuviper/rayon-cond" }
